src/test/ui/consts/const-labeled-break.stderr
error[E0744]: `while` is not allowed in a `const`
  --> $DIR/const-labeled-break.rs:10:19
   |
LL | const CRASH: () = 'a: while break 'a {};
   |                   ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0744`.
